Closed Bug 1196845 Opened 9 years ago Closed 9 years ago

Invalid JSON in saved Java thread profile

Categories

(Core :: Gecko Profiler, defect)

All
Android
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla43
Tracking Status
firefox43 --- fixed

People

(Reporter: jchen, Assigned: jchen)

Details

Attachments

(1 file)

      No description provided.
Saved Java thread profiles are missing a pair of braces. As a result,
the output is invalid JSON.
Attachment #8650595 - Flags: review?(mstange)
Comment on attachment 8650595 [details] [diff] [review]
Fix invalid JSON in saved Java thread profile (v1)

Review of attachment 8650595 [details] [diff] [review]:
-----------------------------------------------------------------

Markus is away, I can review this.
Attachment #8650595 - Flags: review?(mstange) → review+
https://hg.mozilla.org/mozilla-central/rev/55f940d8b0f2
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: