Bug 1196845 - Fix invalid JSON in saved Java thread profile; r=BenWa Saved Java thread profiles are missing a pair of braces. As a result, the output is invalid JSON.